--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@ h3 {
         <h1>Ethan McGee</h1>
         <h2>Freshman in Greenville, South Carolina</h2>
         
-         <p>I am a freshman at Bob Jones University studying computer science with a minor in mathematics. I work for the Computer Science department as a lab monitor.</p>
+         <p>I am a freshman at Bob Jones University studying business. I work for stage crew moving around sets for different plays.</p>
          <p>
-            I enjoy participating in community outreach events, and I am active in my local church: Southside Baptist Church of Gaffney, SC.  I teach Sunday School for the College &amp; Career group and I run the Sound / Video Projection System during services.  I also drive the church bus for weekend activities.
+            I enjoy participating in my societies basketball team, and I am active in my local church: cornerstone baptist in greenville, SC.
          </p> 
          <p>
-            I also enjoy running / hiking as well as a good book
+            I also enjoy running / hiking as well.
          </p>
         
         <h3>EDUCATION</h3>
