--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ h3 {
 </head>    
 <body>
     <div id="content">
-        <h1>Ethan McGee</h1>
+        <h1>caleb fagan</h1>
         <h2>Freshman in Greenville, South Carolina</h2>
         
          <p>I am a freshman at Bob Jones University studying business. I work for stage crew moving around sets for different plays.</p>
